--- a/assets/app.css
+++ b/assets/app.css
@@ -21,7 +21,7 @@ body {
 
 .login-button {
     background-color: #000000;
-    color: #ffffff;
+    color: #f5f5f5e4;
     width: 80px;
     height: 40px;
     border-radius: 0px;
@@ -56,14 +56,94 @@ body {
     aspect-ratio: 1;
     border: 18px solid #000; /* the outer space */
     background:
-        conic-gradient(from 90deg at var(--b) var(--b),black 90deg,white 0) 
+        conic-gradient(from 90deg at var(--b) var(--b),black 90deg,#f5f5f5e4 0) 
         calc(100% + var(--b)/2) calc(100% + var(--b)/2)/
         calc(50%  + var(--b))   calc(50%  + var(--b));
     /* display: inline-block; */
 }
 
 .plus:hover {
-    border: 10px solid white; /* the outer space */
+    border: 18px solid white; /* the outer space */
+    background:
+        conic-gradient(from 90deg at var(--b) var(--b),white 90deg,black 0) 
+        calc(100% + var(--b)/2) calc(100% + var(--b)/2)/
+        calc(50%  + var(--b))   calc(50%  + var(--b));
+}
+
+.sidebar {
+    width: 20%;
+    height: 100%;
+    background: linear-gradient(to bottom, #000000, #494949)
+}
+
+.sidebar-title {
+    height: 50px;
+    width: 100%;
+    color: #f5f5f5e4;
+    display: flex;
+    justify-content: center; /* centers horizontally */
+    text-align: center;
+    align-items: center;
+}
+
+.sidebar-title-inner {
+    height: 80%;
+    width: 80%;
+    color: black;
+    background-color: white;
+    font-size: 25px;
+}
+
+.sidebar-text {
+    font-size: 16px;
+}
+
+.sidebar-option {
+    width: 100%;
+    height: 40px;
+    color: #f5f5f5e4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sidebar-option:hover {
+    color: black;
+    background-color: white;
+    cursor: pointer;
+}
+
+.sidebar-add-button {
+    width: 100%;
+    height: 50px;
+    color: #f5f5f5e4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sidebar-add-button:hover {
+    color: black;
+    background-color: white;
+    cursor: pointer;
+}
+
+
+.plus-sidebar {
+    --b: 2px; /* the thickness */
+    height: 16px;
+    width: 16px; /* the size */
+    aspect-ratio: 1;
+    border: 14px solid #000; /* the outer space */
+    background:
+        conic-gradient(from 90deg at var(--b) var(--b),black 90deg,#f5f5f5e4 0) 
+        calc(100% + var(--b)/2) calc(100% + var(--b)/2)/
+        calc(50%  + var(--b))   calc(50%  + var(--b));
+    /* display: inline-block; */
+}
+
+.sidebar-add-button:hover > .plus-sidebar {
+    border: 14px solid white; /* the outer space */
     background:
         conic-gradient(from 90deg at var(--b) var(--b),white 90deg,black 0) 
         calc(100% + var(--b)/2) calc(100% + var(--b)/2)/
