add interactive graph popups and make buttons more interactive

--- a/assets/app.css
+++ b/assets/app.css
@@ -13,10 +13,15 @@ body {
     cursor: pointer;
     outline: none;
     border-radius: 0;
+    padding: 0;
 }
 
 .square-button:hover {
     background-color: white;  /* Color when button is highlighted */
+}
+
+.square-button:hover > .plus {
+    background-color: white;
 }
 
 .login-button {
@@ -32,11 +37,16 @@ body {
     outline: none;
     text-align: center;
     padding: 0;
+    font-size: 13px;
 }
 
 .login-button:hover {
     background-color: #f5f5f5;
     color: black;
+}
+
+.login-button:active {
+    color: white;
 }
 
 .top-bar {
@@ -50,24 +60,17 @@ body {
 }
 
 .plus {
-    --b: 3px; /* the thickness */
-    height: 24px;
-    width: 24px; /* the size */
-    aspect-ratio: 1;
-    border: 18px solid #000; /* the outer space */
-    background:
-        conic-gradient(from 90deg at var(--b) var(--b),black 90deg,#f5f5f5e4 0) 
-        calc(100% + var(--b)/2) calc(100% + var(--b)/2)/
-        calc(50%  + var(--b))   calc(50%  + var(--b));
-    /* display: inline-block; */
+    background-color: black;
+    border: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    font-size: 20px;
 }
 
 .plus:hover {
-    border: 18px solid white; /* the outer space */
-    background:
-        conic-gradient(from 90deg at var(--b) var(--b),white 90deg,black 0) 
-        calc(100% + var(--b)/2) calc(100% + var(--b)/2)/
-        calc(50%  + var(--b))   calc(50%  + var(--b));
+    color: black;
+    background-color: white;
 }
 
 .sidebar {
@@ -98,6 +101,7 @@ body {
     font-size: 16px;
 }
 
+
 .sidebar-option {
     width: 100%;
     height: 40px;
@@ -111,6 +115,10 @@ body {
     color: black;
     background-color: white;
     cursor: pointer;
+}
+
+.sidebar-option:active > .sidebar-text {
+    color: white;
 }
 
 .sidebar-add-button {
@@ -130,64 +138,56 @@ body {
 
 
 .plus-sidebar {
-    --b: 2px; /* the thickness */
-    height: 16px;
-    width: 16px; /* the size */
-    aspect-ratio: 1;
-    border: 14px solid #000; /* the outer space */
-    background:
-        conic-gradient(from 90deg at var(--b) var(--b),black 90deg,#f5f5f5e4 0) 
-        calc(100% + var(--b)/2) calc(100% + var(--b)/2)/
-        calc(50%  + var(--b))   calc(50%  + var(--b));
-    /* display: inline-block; */
+    background-color: black;
+    border: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    font-size: 20px;
 }
 
 .sidebar-add-button:hover > .plus-sidebar {
-    border: 14px solid white; /* the outer space */
-    background:
-        conic-gradient(from 90deg at var(--b) var(--b),white 90deg,black 0) 
-        calc(100% + var(--b)/2) calc(100% + var(--b)/2)/
-        calc(50%  + var(--b))   calc(50%  + var(--b));
+    background-color: white;
+    color: black;
+}
+
+.sidebar-add-button:active > .plus-sidebar{
+    color: white;
 }
 
 .graph-square {
     border: 1px solid gray;
-    height: 30vh;
+    height: 40vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.add-graph-button {
-    height: 80px;
-    width: 80px;
+.add-graph-area {
+    height: 90%;
+    width: 90%;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.add-graph-button:hover {
-    cursor: pointer;
-    background-color: black;
-}
-
-.add-graph-button:hover > .plus-graph {
-    border: 28px solid black; /* the outer space */
-    background:
-        conic-gradient(from 90deg at var(--b) var(--b),black 90deg,white 0) 
-        calc(100% + var(--b)/2) calc(100% + var(--b)/2)/
-        calc(50%  + var(--b))   calc(50%  + var(--b));
+    background-color: white;
+    border: 0;
+    border-radius: 0;
 }
 
 .plus-graph {
-    --b: 3px; /* the thickness */
-    height: 28px;
-    width: 28px; /* the size */
-    aspect-ratio: 1;
-    border: 28px solid white; /* the outer space */
-    background:
-        conic-gradient(from 90deg at var(--b) var(--b),white 90deg,black 0) 
-        calc(100% + var(--b)/2) calc(100% + var(--b)/2)/
-        calc(50%  + var(--b))   calc(50%  + var(--b));
-    /* display: inline-block; */
+    color: #5f5f5f;
+    font-size: 40px;
+}
+
+.add-graph-area:hover {
+    cursor: pointer;
+    background-color: #d1d1d1;
+}
+
+.add-graph-area:active {
+    background-color: white !important;
+}
+
+.add-graph-area:active > .plus-graph {
+    color: white;
 }
