--- a/assets/app.css
+++ b/assets/app.css
@@ -108,9 +108,22 @@ body {
     width: 100%;
     height: 40px;
     color: #f5f5f5e4;
+    background-color: black;
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 0;
+}
+
+.sidebar-option-selected {
+    width: 100%;
+    height: 40px;
+    color: black;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 0;
 }
 
 .sidebar-option:hover {
@@ -183,7 +196,7 @@ body {
 
 .add-graph-area:hover {
     cursor: pointer;
-    background-color: #d1d1d1;
+    background-color: #e8e8e8;
 }
 
 .add-graph-area:active {
@@ -211,4 +224,18 @@ body {
 .graph-container {
     width: 100%;
     height: 100%;
+}
+
+/* #radio-input input[type="radio"] {
+    display: none;
+} */
+
+#radio-input {
+    text-align: center;
+    color: white;
+}
+#radio-input label:hover {
+    cursor: pointer;
+    background-color: white;
+    color: black;
 }
