--- a/assets/app.css
+++ b/assets/app.css
@@ -257,3 +257,18 @@ body {
 #view-menu:active {
     background-color: rgb(30, 30, 30);
 }
+
+#table-view-container {
+    width: 100%;
+    height: 100%;
+}
+
+#graph-view-container {
+    width: 100%;
+    height: 100%;
+}
+
+#content-container {
+    width: 100%;
+    height: 100%;
+}
