--- a/assets/app.css
+++ b/assets/app.css
@@ -172,10 +172,12 @@ body {
 
 .graph-square {
     border: 1px solid gray;
-    height: 40vh;
+    /* height: 40vh; */
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100%;
+    width: 100%;
 }
 
 .add-graph-area {
@@ -265,6 +267,21 @@ body {
 }
 
 #content-container {
+    width: 100%;
+    height: 100%;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
+    width: 100%;
+    height: 80vh; /* or any other fixed size */
+    gap: 0px; /* spacing between the grid items */
+}
+
+.grid-item {
+    border: 1px solid black;
     width: 100%;
     height: 100%;
 }
