fix bug with display-changing callback

--- a/assets/app.css
+++ b/assets/app.css
@@ -268,10 +268,10 @@ body {
     height: 100%;
 }
 
-#graph-view-container {
+/* #graph-view-container {
     width: 100%;
     height: 100%;
-}
+} */
 
 #content-container {
     width: 100%;
