--- a/assets/app.css
+++ b/assets/app.css
@@ -234,6 +234,11 @@ body {
     height: 100%;
 }
 
+.filled-container {
+    width: 100%;
+    height: 100%;
+}
+
 #radio-input {
     text-align: center;
     color: white;
@@ -283,14 +288,14 @@ body {
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
     width: 100%;
-    height: 80vh;
+    height: 90vh;
     /* or any other fixed size */
     gap: 0px;
     /* spacing between the grid items */
 }
 
 .grid-item {
-    border: 1px solid black;
+    border: 1px solid #aaaaaa;
     width: 100%;
     height: 100%;
 }
