make delete button work

--- a/assets/app.css
+++ b/assets/app.css
@@ -237,6 +237,7 @@ body {
 .filled-container {
     width: 100%;
     height: 100%;
+    position: relative;
 }
 
 #radio-input {
@@ -298,4 +299,32 @@ body {
     border: 1px solid #aaaaaa;
     width: 100%;
     height: 100%;
+}
+
+.graph-menu-options {
+    background-color: red;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 1000;
+    width: 50px;
+    height: 25px;
+    border: 1px white;
+    display: flex;
+    flex-direction: row;
+}
+
+.graph-menu-button {
+    background-color: black;
+    width: 25px;
+    height: 25px;
+    border: 0;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+.graph-menu-button-img {
+    width: 20px;
+    height: 20px;
 }
