--- a/assets/app.css
+++ b/assets/app.css
@@ -258,7 +258,7 @@ body {
     height: 40px;
     background-color: black;
     border-radius: 0 0 10px 0;
-    border: 1px black;
+    border: 1px solid white;
 }
 
 #view-menu:hover {
@@ -302,20 +302,19 @@ body {
 }
 
 .graph-menu-options {
-    background-color: red;
     position: absolute;
     bottom: 0;
     right: 0;
     z-index: 1000;
     width: 50px;
     height: 25px;
-    border: 1px white;
-    display: flex;
+    /* display: flex; */
     flex-direction: row;
+    display: none;
 }
 
 .graph-menu-button {
-    background-color: black;
+    background-color: #111111;
     width: 25px;
     height: 25px;
     border: 0;
@@ -324,7 +323,15 @@ body {
     display: flex;
 }
 
+.graph-menu-button:hover {
+    background-color: rgb(122, 122, 122);
+}
+
 .graph-menu-button-img {
     width: 20px;
     height: 20px;
+}
+
+.filled-container:hover .graph-menu-options {
+    display: flex;
 }
