update gitignore and add ai menu to component modal

--- a/assets/app.css
+++ b/assets/app.css
@@ -275,6 +275,12 @@ body {
     /* border: 1px solid white; */
     margin-right: 10px;
     border: 0;
+    color: white;
+    font-size: 22px;
+}
+
+#graph-menu-ai-button {
+    margin-top: 5px;
 }
 
 .view-menu-button:hover {
