--- a/assets/app.css
+++ b/assets/app.css
@@ -382,22 +382,17 @@ body {
 
 #levelup-modal-body {
     background: linear-gradient(to bottom right, #CDA2D5, cyan) !important;
-    height: 300px;
+    height: 360px;
     width: 100%;
 }
 
-#levelup-message-container {
+.levelup-message-container {
     display: flex;
-    /* Enable Flexbox */
     flex-direction: row;
-    /* Stack children vertically */
     align-items: flex-start;
-    /* Align items to the start of the container */
-    height: 300px;
+    height: 50px;
     justify-content: center;
-    /* Center horizontally */
     align-items: center;
-    /* Set a specific height for the container */
 }
 
 .levelup-msg {
